--- a/package.json
+++ b/package.json
@@ -8,17 +8,26 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "babel-preset-stage-0": "^6.24.1",
     "html-webpack-plugin": "^2.28.0",
-    "react": "^15.5.4",
+    "react": "16.0.0-alpha.6",
     "react-dom": "^15.5.4",
+    "react-native": "0.44.2",
     "webpack": "^2.6.1"
   },
   "devDependencies": {
+    "babel-jest": "20.0.3",
+    "babel-preset-react-native": "1.9.2",
+    "jest": "20.0.4",
     "webpack-dev-server": "^2.4.5"
   },
   "scripts": {
+    "android": "node node_modules/react-native/local-cli/cli.js start",
     "web": "webpack-dev-server --content-base web-build/ --config web/webpack.config.js -d --hot",
     "pages": "NODE_ENV='production' webpack --config web/webpack.config.js --optimize-minimize"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
